--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  provider: ^3.1.0+1
+  http: ^0.12.0+2
+
 
 
 # For information on the generic Dart part of this file, see the
